public/css/style.css
@import url('http://fonts.cdnfonts.com/css/arial');

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video,
input,
textarea,
button,
li {
    margin: 0;
    padding: 0;
    border: 0;
    list-style: none;
    vertical-align: baseline;
    box-sizing: border-box;
    /*font-family: 'Arial', sans-serif;*/
}

button:focus,
button:active,
input:active,
input:focus,
textarea:active,
textarea:focus,
a:hover {
    outline: 0 !important;
    box-shadow: none !important;
    color: white;
}

.dropdown-item.active,
.dropdown-item:active,
.dropdown-item:focus,
.dropdown-item:hover {
    color: white;
    text-decoration: none;
    background-color: unset;
}

.btn-outline-danger:not(:disabled):not(.disabled).active,
.btn-outline-danger:not(:disabled):not(.disabled):active,
.show>.btn-outline-danger.dropdown-toggle {
    color: #fff;
    background-color: #2da2af !important;
    border-color: #2da2af !important;
}

.btn-danger:not(:disabled):not(.disabled).active,
.btn-danger:not(:disabled):not(.disabled):active,
.show>.btn-danger.dropdown-toggle {
    color: #fff;
    background-color: #2da2af !important;
    border-color: #2da2af !important;
}

button.btn.btn-danger:hover {
    background: #c4c4c4;
    border-color: #c4c4c4;
}

.container {
    max-width: 1170px;
}

strong {
    font-family: sans-serif;
    font-size: 15px;
}

h1,
h2,
h3,
h4,
h6,
label {
    color: #262626;
}

h3 {
    font-weight: 400;
    font-size: 19px;
}

h2 {
    font-size: 25px;
    font-weight: 400;
}

.header-sec ul li a:hover,
.header-sec .nav-link:focus {
    text-decoration: none !important;
    color: #fff !important;
    background-color: transparent;

}

/************************** HEADER-SEC ***************************/
.header-sec {
    background: #060606F7;
    min-height: 186px;
}

.logo {
    width: 228px;
    border-right: solid 1px;
}

.logo img {
    max-width: 193px;
    height: 180px;
    padding: 20px 15px;
    border-right: solid 0px;
}

.navbar-nav .nav-link:hover {
    border-bottom: 1px solid white;
    transition: all 1s;
}

.nav-item {
    padding: 0px 0px 0px 30px;
}

.nav-link {
    color: white;
    font-size: 16px;
    font-weight: 400;
    padding: 20px 10px;
}

ul.dropdown-menu {
    background: #171717;
    padding: 12px 20px;
    left: 9px;
    border-radius: 0px;
    transition: all 0.3s;
}

.dropdown-item {
    color: #aaa !important;
    font-size: 15px;
    line-height: 35px;
    /* padding: 0px; */
}

.dropdown-item:hover {
    color: white !important;
}

.btn.btn-primary {
    background: #1D4354 !important;
    border-color: #1D4354;
    border: 1px solid #1D4354;
    /*
    2022-04-28  kom     Remove override of bootstrap default padding
                        - All buttons requiring this padding should implement a newly created class (eg .btn-primary_padded) with the below settings
    */
    /* padding: 15px 30px !important;
    border-radius: 3px; */
    border-color: #0062cc00 !important;
}

.btn.btn-primary_padded {
    padding: 15px 30px !important;
    border-radius: 3px;
}

.nav-link i.fa.fa-bell-o {
    font-size: 25px;
}

li:hover ul {
    display: block !important;
}

/********************************** FILTER-SEC *************************/
.filter-sec {
    padding: 30px 0px;
}

/* .form-control {
     height: 50px;
     padding: 12px 30px;
 } */
.heading-label {
    font-size: 20px;
}

.tab-content .accordion-button:not(.collapsed) {
    color: #000;
    background-color:transparent ; 
    box-shadow: inset 0 0px 0 rgb(0 0 0 / 13%); 
    padding: 15px 0px;
}
.tab-content .accordion-button:active {
    color: #000 !important;
}
.tab-content .card-header {
    padding: 0px 0px 0px;
    margin-bottom: 0;
    background-color: transparent;
    border-bottom: none;
}
.tab-content .accordion-item:last-of-type .accordion-button.collapsed {
    
    padding: 15px 0;
}
.tab-content .accordion-body {
    padding: 0; 
}
.tab-content .accordion-item {
    border: none;
}

.tab-content .card-body {
    padding: 20px 0px 0px;
}

.tab-content .card-header:hover i {
    color: #1a1a1a !important;
}

.btn-3.btn-link {
    font-size: 20px;
    font-weight: 500;
    display: flex;
    justify-content: space-between;
    cursor: pointer;
    line-height: 35px;
    font-weight: 400;
    color: #000;
    text-decoration: none !important;
}
.btn-link:hover {
    color: #000 !important;
}
.btn-link::before {
   vertical-align: sub !important;
}
.faq-outer .btn-link{
    color: #6a6a6a;
    text-decoration: none;
    font-weight: 800;
}
.faq-outer .btn-link:hover{
    color: #5cc7c3 !important;
}
.faq-outer .accordion-button:not(.collapsed){
    background-color: #e7f1ff00;
}
.tab-content .card-header:hover i {
    color: #1a1a1a !important;
}

.tab-content svg {
    color: #000000;
    font-size: 15px;
    margin-top: 10px;
    
}
.tab-content:hover svg {
    fill: #000000;
    
}
.fa-angle-down:before {
    vertical-align: sub;
}
.tab-content i.fa.fa-angle-up {
    color: #cbcbcb;
}

.range-sl {
    color: #2da2af;
    padding: 15px 0px 2px;
}

.tab-content .custom-control-label {
    display: block;
    color: #6d6d6d;
    margin-bottom: 15px;
}

#more {
    display: none;
}

.show-more {
    color: #2da2af;
    font-size: 13px;
    font-style: italic !important;
    margin-top: 6px;
}

.show-more:focus {
    color: #2da2af;
}
/* ... */

